--- a/index.ipynb
+++ b/index.ipynb
@@ -51,20 +51,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here; import necessary packages"
+    "#Your code here; import necessary packages\n",
+    "import sqlite3\n",
+    "conn=sqlite3.Connection('school.sqlite')\n",
+    "c=conn.cursor()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f6caced53b0>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here; create the database school.sqlite"
+    "c.execute(\"\"\"CREATE TABLE contactzzz (userId INTEGER PRIMARY KEY,\n",
+    "                                        firstName TEXT,\n",
+    "                                        lastName TEXT,\n",
+    "                                        role TEXT,\n",
+    "                                        email TEXT,\n",
+    "                                        telephone INTERGER,\n",
+    "                                        street TEXT,\n",
+    "                                        city TEXT,\n",
+    "                                        state TEXT,\n",
+    "                                        zipcode TEXT);\"\"\")"
    ]
   },
   {
@@ -78,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +109,7 @@
     "import pickle\n",
     "\n",
     "with open('contact_list.pickle', 'rb') as f:\n",
-    "    contacts = pickle.load(f)"
+    "    contacts = pickle.load(f)\n"
    ]
   },
   {
@@ -100,38 +123,325 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'firstName': 'Christine', 'lastName': 'Holden', 'role': 'staff', 'telephone ': 2035687697, 'street': '1672 Whitman Court', 'city': 'Stamford', 'state': 'CT', 'zipcode ': '06995'}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code to load the list of dictionaries; just run this cell"
+    "# Code to load the list of dictionaries; just run this cell\n",
+    "\n",
+    "print(contacts[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code to iterate over the contact list and populate the contactInfo table here"
+    "# Your code to iterate over the contact list and populate the contactInfo table here\n",
+    "for contact in contacts:\n",
+    "    firstName=contact['firstName']\n",
+    "    lastName=contact['lastName']\n",
+    "    role = contact['role']\n",
+    "    telephone  = contact['telephone ']\n",
+    "    street = contact['street']\n",
+    "    city = contact['city']\n",
+    "    state = contact['state']\n",
+    "    zipcode  = contact['zipcode ']\n",
+    "    c.execute(\"\"\"INSERT INTO contactzzz (firstName, lastName, role, telephone, street, city, state, zipcode) \n",
+    "            VALUES ('{}','{}','{}','{}','{}','{}','{}','{}');\"\"\".format(firstName, lastName, role, telephone, street, city, state, zipcode))\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1,\n",
+       "  'Christine',\n",
+       "  'Holden',\n",
+       "  'staff',\n",
+       "  None,\n",
+       "  2035687697,\n",
+       "  '1672 Whitman Court',\n",
+       "  'Stamford',\n",
+       "  'CT',\n",
+       "  '06995'),\n",
+       " (2,\n",
+       "  'Christopher',\n",
+       "  'Warren',\n",
+       "  'student',\n",
+       "  None,\n",
+       "  2175150957,\n",
+       "  '1935 University Hill Road',\n",
+       "  'Champaign',\n",
+       "  'IL',\n",
+       "  '61938'),\n",
+       " (3,\n",
+       "  'Linda',\n",
+       "  'Jacobson',\n",
+       "  'staff',\n",
+       "  None,\n",
+       "  4049446441,\n",
+       "  '479 Musgrave Street',\n",
+       "  'Atlanta',\n",
+       "  'GA',\n",
+       "  '30303'),\n",
+       " (4,\n",
+       "  'Andrew',\n",
+       "  'Stepp',\n",
+       "  'student',\n",
+       "  None,\n",
+       "  7866419252,\n",
+       "  '2981 Lamberts Branch Road',\n",
+       "  'Hialeah',\n",
+       "  'Fl',\n",
+       "  '33012'),\n",
+       " (5,\n",
+       "  'Jane',\n",
+       "  'Evans',\n",
+       "  'student',\n",
+       "  None,\n",
+       "  3259909290,\n",
+       "  '1461 Briarhill Lane',\n",
+       "  'Abilene',\n",
+       "  'TX',\n",
+       "  '79602'),\n",
+       " (6,\n",
+       "  'Jane',\n",
+       "  'Evans',\n",
+       "  'student',\n",
+       "  None,\n",
+       "  3259909290,\n",
+       "  '1461 Briarhill Lane',\n",
+       "  'Abilene',\n",
+       "  'TX',\n",
+       "  '79602'),\n",
+       " (7,\n",
+       "  'Mary',\n",
+       "  'Raines',\n",
+       "  'student',\n",
+       "  None,\n",
+       "  9075772295,\n",
+       "  '3975 Jerry Toth Drive',\n",
+       "  'Ninilchik',\n",
+       "  'AK',\n",
+       "  '99639'),\n",
+       " (8,\n",
+       "  'Ed',\n",
+       "  'Lyman',\n",
+       "  'student',\n",
+       "  None,\n",
+       "  5179695576,\n",
+       "  '3478 Be Sreet',\n",
+       "  'Lansing',\n",
+       "  'MI',\n",
+       "  '48933')]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Query the Table to Ensure it is populated"
+    "# Query the Table to Ensure it is populated\n",
+    "c.execute(\"\"\"SELECT * FROM contactzzz\"\"\").fetchall()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userId</th>\n",
+       "      <th>firstName</th>\n",
+       "      <th>lastName</th>\n",
+       "      <th>role</th>\n",
+       "      <th>email</th>\n",
+       "      <th>telephone</th>\n",
+       "      <th>street</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>zipcode</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Christine</td>\n",
+       "      <td>Holden</td>\n",
+       "      <td>staff</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2035687697</td>\n",
+       "      <td>1672 Whitman Court</td>\n",
+       "      <td>Stamford</td>\n",
+       "      <td>CT</td>\n",
+       "      <td>06995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Christopher</td>\n",
+       "      <td>Warren</td>\n",
+       "      <td>student</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2175150957</td>\n",
+       "      <td>1935 University Hill Road</td>\n",
+       "      <td>Champaign</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>61938</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Linda</td>\n",
+       "      <td>Jacobson</td>\n",
+       "      <td>staff</td>\n",
+       "      <td>None</td>\n",
+       "      <td>4049446441</td>\n",
+       "      <td>479 Musgrave Street</td>\n",
+       "      <td>Atlanta</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>30303</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Andrew</td>\n",
+       "      <td>Stepp</td>\n",
+       "      <td>student</td>\n",
+       "      <td>None</td>\n",
+       "      <td>7866419252</td>\n",
+       "      <td>2981 Lamberts Branch Road</td>\n",
+       "      <td>Hialeah</td>\n",
+       "      <td>Fl</td>\n",
+       "      <td>33012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Jane</td>\n",
+       "      <td>Evans</td>\n",
+       "      <td>student</td>\n",
+       "      <td>None</td>\n",
+       "      <td>3259909290</td>\n",
+       "      <td>1461 Briarhill Lane</td>\n",
+       "      <td>Abilene</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>79602</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Jane</td>\n",
+       "      <td>Evans</td>\n",
+       "      <td>student</td>\n",
+       "      <td>None</td>\n",
+       "      <td>3259909290</td>\n",
+       "      <td>1461 Briarhill Lane</td>\n",
+       "      <td>Abilene</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>79602</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Mary</td>\n",
+       "      <td>Raines</td>\n",
+       "      <td>student</td>\n",
+       "      <td>None</td>\n",
+       "      <td>9075772295</td>\n",
+       "      <td>3975 Jerry Toth Drive</td>\n",
+       "      <td>Ninilchik</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>99639</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Ed</td>\n",
+       "      <td>Lyman</td>\n",
+       "      <td>student</td>\n",
+       "      <td>None</td>\n",
+       "      <td>5179695576</td>\n",
+       "      <td>3478 Be Sreet</td>\n",
+       "      <td>Lansing</td>\n",
+       "      <td>MI</td>\n",
+       "      <td>48933</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   userId    firstName  lastName     role email   telephone  \\\n",
+       "0       1    Christine    Holden    staff  None  2035687697   \n",
+       "1       2  Christopher    Warren  student  None  2175150957   \n",
+       "2       3        Linda  Jacobson    staff  None  4049446441   \n",
+       "3       4       Andrew     Stepp  student  None  7866419252   \n",
+       "4       5         Jane     Evans  student  None  3259909290   \n",
+       "5       6         Jane     Evans  student  None  3259909290   \n",
+       "6       7         Mary    Raines  student  None  9075772295   \n",
+       "7       8           Ed     Lyman  student  None  5179695576   \n",
+       "\n",
+       "                      street       city state zipcode  \n",
+       "0         1672 Whitman Court   Stamford    CT   06995  \n",
+       "1  1935 University Hill Road  Champaign    IL   61938  \n",
+       "2        479 Musgrave Street    Atlanta    GA   30303  \n",
+       "3  2981 Lamberts Branch Road    Hialeah    Fl   33012  \n",
+       "4        1461 Briarhill Lane    Abilene    TX   79602  \n",
+       "5        1461 Briarhill Lane    Abilene    TX   79602  \n",
+       "6      3975 Jerry Toth Drive  Ninilchik    AK   99639  \n",
+       "7              3478 Be Sreet    Lansing    MI   48933  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "import pandas as pd\n",
+    "\n",
+    "c.execute(\"\"\"SELECT * FROM contactzzz;\"\"\")\n",
+    "df=pd.DataFrame(c.fetchall())\n",
+    "df.columns=[x[0] for x in c.description]\n",
+    "df"
    ]
   },
   {
@@ -145,11 +455,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "conn.commit()"
    ]
   },
   {
@@ -175,11 +485,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f6caced53b0>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here; create the grades table."
+    "c.execute(\"\"\"CREATE TABLE grades (userId INTEGER NOT NULL,\n",
+    "                                courseId INTEGER NOT NULL,\n",
+    "                                greade INTEGER,\n",
+    "                                PRIMARY KEY(userId, courseId));\"\"\")"
    ]
   },
   {
@@ -193,29 +517,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Jane', 'Evans', 3259909290, 2)]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here; find the duplicate entry"
+    "#Your code here; find the duplicate entry\n",
+    "c.execute(\"\"\"SELECT firstName, lastName, telephone, count(*) FROM contactzzz\n",
+    "            GROUP BY 1,2,3\n",
+    "            HAVING count(*)>1;\"\"\").fetchall()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f6caced53b0>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here; delete the duplicate entry"
+    "#Your code here; delete the duplicate entry\n",
+    "c.execute(\"\"\"DELETE FROM contactzzz WHERE telephone=3259909290;\"\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here; check that the duplicate entry was removed."
+    "#Your code here; check that the duplicate entry was removed.\n",
+    "c.execute(\"\"\"SELECT * FROM contactzzz WHERE telephone=3259909290;\"\"\").fetchall()"
    ]
   },
   {
@@ -229,11 +591,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f6caced53b0>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here; update Ed's address"
+    "#Your code here; update Ed's address\n",
+    "c.execute(\"\"\"UPDATE contactzzz \n",
+    "          set street='2910 Simpson Avenue', \n",
+    "          city='York', \n",
+    "          state='PA', \n",
+    "          zipcode='17403'\n",
+    "          WHERE firstName='Ed' & lastName='Lyman';\"\"\")"
    ]
   },
   {
@@ -247,11 +626,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "conn.commit()"
    ]
   },
   {
@@ -280,7 +659,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
